--- a/java-basic/build.gradle
+++ b/java-basic/build.gradle
@@ -11,5 +11,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.8'
     testImplementation 'junit:junit:4.13.2'
     implementation 'com.google.guava:guava:30.1-jre'
+    implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.4'
 }
 
